Fix default theme colour contrast; fix notice text colour and ensure tests match editor output

--- a/base.css
+++ b/base.css
@@ -199,6 +199,16 @@ html.dark .Pinpoint.ThemeToggle .mode::after {
 	@apply flex flex-col items-center md:items-start;
 }
 
+.Pinpoint.Footer .Pinpoint.Subscribe {
+	@apply transition-all duration-200;
+	color: var(--footer-text-color);
+}
+
+.Pinpoint.Footer .Pinpoint.Subscribe:hover {
+	filter: brightness(1.5);
+}
+
+
 /*
  * Styles for the copyright component
  */
